# update-ec2-security-group

./: .pre-commit-config.yaml  pyproject.toml
update_ec2_security_group/: main.py
