[project]
name = "update-ec2-security-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42",
]

[project.scripts]
update-ec2-security-group = "update_ec2_security_group.main:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "update_ec2_security_group"
module-root = ""

[tool.uv]
package = true

[dependency-groups]
dev = [
    "boto3-stubs>=1.42",
]
