[project]
name = "update-ec2-security-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42",
    "boto3-stubs[ec2]>=1.42",
    "inquirer>=3.4.1",
    "requests>=2.32.5",
]

[project.scripts]
update-ec2-security-group = "update_ec2_security_group.main:main"

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "update_ec2_security_group"
module-root = ""

[tool.uv]
package = true

[dependency-groups]
dev = [
]
